--- a/assign-6.html
+++ b/assign-6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Power Fitness (flexEx)</title>
-    <link rel="stylesheet" href="flexEx.css">
+    <link rel="stylesheet" href="assign-6.css">
 </head>
 <body>
     <header class="header">
