--- a/assign-8.html
+++ b/assign-8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Layout</title>
-    <link rel="stylesheet" href="GridBoxEx.css">
+    <link rel="stylesheet" href="assign-8.css">
 </head>
 <body>
     <div class="grid-container">
